# pika

./: .gitignore  Cargo.toml  JOURNAL.md  README.md  flake.nix  justfile
apps/rapture/rust/: Cargo.toml  uniffi.toml
apps/rapture/rust/src/: channel_groups.rs  chat.rs  control.rs  lib.rs  permissions.rs  reconcile.rs  sim.rs  storage.rs  voice.rs  voice_media.rs
apps/rapture/rust/tests/: app_flows.rs  bootstrap_smoke.rs  channel_groups.rs  chat_ops.rs  control_ops.rs  e2e_local_moq_voice.rs  e2e_local_relay.rs  permission_matrix.rs  reconcile_membership.rs  voice_ops.rs
cli/: README.md
docs/: agent-ci.md  architecture.md  full-screen-scroll.md  incus-dev-lane.md  incus-migration-plan.md  ios-env.md  pikaci-apple-remote-access.md  release.md  rmp-ci.md
infra/: justfile
ios/: project.yml
just/: agent.just  checks.just
scripts/: agent-brief  agent-chat-demo.sh  agent-demo-incus.sh  agent-demo.sh  decrypt-keystore  demo-agent-ec2.sh  demo-agent-incus.sh  forge-github-ci-shim.py  incus-dev-image.sh  incus-managed-agent-smoke.sh  init-release-secrets  pikaci-apple-github-step  pikaci-apple-remote.sh  pikaci-shadow-summary.py  set-release-version  sync-pikachat-version  test_forge_github_ci_shim.py  with-pikaci-apple-ci-env
secrets/: pikaci-apple.env.age
todos/: agent-provisioning-screen.md  chat-reliability.md  hypernote-unified-rendering-plan.md  ios-share-extension-plan.md  pika-share-plan.md  pikaci-staged-ci-plan.md  rapture-guild-control-spec.md  tests-living-plan.md
tools/: android-ui-test-ci  cli-smoke  interop-rust-baseline  ios-sim-ensure  run-ios  (+7 more)
(+209 files in other folders)
