[package]
name = "rapture_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
flume = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uniffi = "0.31.0"

[dev-dependencies]
tempfile = "3"
